# mommyshops

./: .dockerignore  .editorconfig  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .vercelignore  APIFY_ENHANCED_INTEGRATION.md  ARQUITECTURA_Y_ESPECIFICACIONES_COMPLETAS.md  CRITICAL_FIXES_SUMMARY.md  DATA_FLOW_DOCUMENTATION.md  Dockerfile  ENHANCED_SUBSTITUTION_GUIDE.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIREBASE_DATA_STRUCTURE_ANALYSIS.md  IMAGE_ANALYSIS_TESTING_DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ImageAnalysisTest.java  Makefile  OllamaProductAnalysis.java  PLACEHOLDER_FIXES_SUMMARY.md  RAILWAY_DEPLOYMENT.md  README.md  RESILIENCE_IMPLEMENTATION_SUMMARY.md  RealImageAnalysis.java  UPDATE_BACKEND.md  VERCEL_DEPLOY.md  api_test.html  api_utils_production.py  app_running_report.md  config.yaml  cosmetic_ingredients_lexicon.txt  database.py  dev_sqlite.db  docker-compose.ollama.yml  docker-compose.yml  dockerfile.save  (+58 more)
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml  secrets.toml.example
backend-java/: Dockerfile  RUNTIME_SETUP_GUIDE.md  checkstyle.xml  pom.xml
backend-python/: Dockerfile  alembic.ini  analyze_ingredients_detailed.py  analyze_with_sources.py  api_utils_production.py  apify_enhanced_scraper.py  check_firebase_users.py  cir_scraper.py  cosing_api_store.py  create_complete_test_image.py  database.py  database_security.py  enhanced_ocr_analysis.py  enhanced_substitution_mapping.py  frontend.py  google_auth_integration.py  iccr_scraper.py  inci_beauty_api.py  inci_beauty_database_scraper.py  init_db.py  integration_config.py  main.py  requirements.txt  (+19 more)
(+349 files in other folders)
